--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Configurations
-title:            Liderando Práticas Onboarding
-longtitle:        Liderando Práticas Onboarding - Como acelerar o aprendizado e disseminar cultura de inovação ágil
+title:            Como acelerar o aprendizado e disseminar cultura de inovação ágil
+longtitle:        Como acelerar o aprendizado e disseminar cultura de inovação ágil
 author:           Carla Rocha
 email:            caguiar@unb.br
 description: >
